# testbot

./: .coverage  .flake8  .gitignore  adapter_with_error_handler.py  app.py  booking_details.py  census.py  config.py  flight_booking_recognizer.py  pyproject.toml  requirements.txt  test.py  test_unit.py  test_with_keys.py  utterances.json
.github/workflows/: main.yaml  main.yml  main_travelszwebapp.yml
bots/: dialog_and_welcome_bot.py  dialog_bot.py
bots/resources/: welcomeCard.json
dialogs/: adaptive_card_example.py  booking_dialog.py  cancel_and_help_dialog.py  date_resolver_dialog.py  main_dialog.py  toto.py
helpers/: __init__.py  activity_helper.py  luis_helper.py
scripts/: app_config.py  app_create.py  app_trainer.py  main.py  test.json  train.py  train_config.yaml  utt.json  utterances.json
tests/: config.py  test_bot.py
