[tool.poetry]
name = "FlyBot"
version = "0.1.0"
description = ""
authors = ["Sylvain <sylvain@zyssman.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
bandit = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
